[gd_scene load_steps=5 format=3 uid="uid://b2ae3pq2o6ovj"]

[ext_resource type="Script" path="res://scripts/config_player.gd" id="1_k5bxy"]
[ext_resource type="Texture2D" uid="uid://pv5ohbhbeo8o" path="res://assets/imgs/popup_menu_jogo.webp" id="2_sjq6r"]
[ext_resource type="Texture2D" uid="uid://dxwx0g2y6oiua" path="res://assets/icons/icon_close.svg" id="3_8pa7r"]
[ext_resource type="Texture2D" uid="uid://c8g40lpeffn46" path="res://assets/icons/icon_close_pressionado.webp" id="4_qvklm"]

[node name="ConfigPlayer" type="CanvasLayer"]
process_mode = 3
layer = 2
visible = false
script = ExtResource("1_k5bxy")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.352941)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(608, 328)
scale = Vector2(1.47388, 1.47388)
texture = ExtResource("2_sjq6r")

[node name="Close" type="TouchScreenButton" parent="Sprite2D"]
position = Vector2(197.301, -118.38)
scale = Vector2(1.31534, 1.31534)
texture_normal = ExtResource("3_8pa7r")
texture_pressed = ExtResource("4_qvklm")

[node name="SliderVida" type="HSlider" parent="Sprite2D"]
modulate = Color(1, 0.588235, 0, 1)
offset_left = -212.0
offset_top = -22.0
offset_right = 228.0
offset_bottom = -6.0
max_value = 10.0

[node name="SliderDica" type="HSlider" parent="Sprite2D"]
visible = false
modulate = Color(1, 0.588235, 0, 1)
offset_left = -211.686
offset_top = 65.1341
offset_right = 233.314
offset_bottom = 81.1341
max_value = 10.0

[node name="Label" type="Label" parent="Sprite2D"]
offset_left = -211.686
offset_top = -43.4228
offset_right = -48.6859
offset_bottom = -24.4228
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
text = "Quantidade de Vidas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Sprite2D"]
visible = false
offset_left = -211.686
offset_top = 37.9949
offset_right = -48.6859
offset_bottom = 56.9949
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
text = "Quantidade de Dicas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="Sprite2D"]
offset_left = -113.985
offset_top = -113.985
offset_right = 115.015
offset_bottom = -89.9847
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
text = "Ajustes de Dificuldade"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="Sprite2D"]
offset_left = -211.686
offset_top = -5.42785
offset_right = 230.314
offset_bottom = 21.5722
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
text = "0       1       2        3       4       5       6        7       8        9      10"
vertical_alignment = 1

[node name="Label5" type="Label" parent="Sprite2D"]
visible = false
offset_left = -211.686
offset_top = 81.4177
offset_right = 230.314
offset_bottom = 108.418
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
text = "0       1       2        3       4       5       6        7       8        9      10"
vertical_alignment = 1

[connection signal="pressed" from="Sprite2D/Close" to="." method="_on_close_pressed"]
[connection signal="value_changed" from="Sprite2D/SliderVida" to="." method="_on_slider_vida_value_changed"]
[connection signal="value_changed" from="Sprite2D/SliderDica" to="." method="_on_slider_dica_value_changed"]
